add meta data and connect css style

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Cutting Edge Color hair salon specialized in color">
+    <meta name="keywords" content="hair, hair salon, hair color, hair dye">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>PP1 - Cutting Edge Color</title>
 </head>
 <body>
     <h1>Hello World</h1>
