--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
     <title>PP1 - Cutting Edge Color</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>Header content</header>
+    <section>
+        Hero image
+    </section>
+    <section>
+        What we do
+    </section>
+    <section>
+        image with text
+    </section>
+    <section>
+        Who we are
+    </section>
+    <footer>
+        Phone and social
+    </footer>
 </body>
 </html>
