--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
     <title>PP1 - Cutting Edge Color</title>
 </head>
 <body>
-    <header>Header content</header>
+    <header>
+        <a href="index.html">
+            <h1>Cutting Edge Color</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li>
+                    <a href="gallery.html">Gallery</a>
+                </li>
+                <li>
+                    <a href="prices.html">Prices</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>
         Hero image
     </section>
