add main header structure and links in  nav

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="keywords" content="hair, hair salon, hair color, hair dye">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>PP1 - Cutting Edge Color</title>
+    <title>PP1 - Vibrant Cuts</title>
 </head>
 <body>
     <header>
         <a href="index.html">
-            <h1>Cutting Edge Color</h1>
+            <h1>Vibrant Cuts</h1>
         </a>
         <nav>
             <ul>
