--- a/index.html
+++ b/index.html
@@ -12,25 +12,29 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
-            <h1>Vibrant Cuts</h1>
-        </a>
-        <nav>
-            <ul>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-                <li>
-                    <a href="gallery.html">Gallery</a>
-                </li>
-                <li>
-                    <a href="prices.html">Prices</a>
-                </li>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="header-container">
+            <div class="logo">
+                <a href="index.html">
+                    <h1 id="logo">Vibrant Cuts</h1>
+                </a>
+            </div>
+            <nav class="navigation">
+                <ul>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="gallery.html">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="prices.html">Prices</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    </ul>
+            </nav>
+        </div>
     </header>
     <section>
         Hero image
