add style hover and active to nav

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <nav class="navigation">
                 <ul>
                     <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                    <li>
-                        <a href="gallery.html">Gallery</a>
+                        <a href="index.html" class="active">Home</a>
                     </li>
                     <li>
                         <a href="prices.html">Prices</a>
                     </li>
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="gallery.html">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
                     </li>
                     </ul>
             </nav>
