--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         </div>
     </header>
     <section>
-        Hero image
+        <div id="hero-image"></div>
+        <div id="txt-hair-talk"></div>
     </section>
     <section>
         What we do
