add cover txt and style

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
             </nav>
         </div>
     </header>
-    <section>
+    <section id="hero-outer">
         <div id="hero-image"></div>
-        <div id="txt-hair-talk"></div>
+        <div id="txt-hair-talk">
+            <h3>Let your hair do the talking</h3>
+        </div>
     </section>
     <section>
         What we do
