add structure, images to  what-we-do

--- a/index.html
+++ b/index.html
@@ -43,7 +43,18 @@
         </div>
     </section>
     <section>
-        What we do
+        <h2>What we do!</h2>
+        <div id="what-we-do">
+            <span>
+                <img src="assets/images/cut.jpg" alt="hand holding a hair dryer">
+            </span>
+            <span>
+                <img src="assets/images/color_s.jpg" alt="girl with pink hair">
+            </span>
+            <span>
+                <img src="assets/images/style_s.jpg" alt="hand holding a hair dryer">
+            </span>
+        </div>
     </section>
     <section>
         image with text
