add style details  to what we do

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </section>
     <section>
-        <h2>What we do!</h2>
+        <h2 id="do-h2">What we do!</h2>
         <div id="what-we-do">
             <span>
                 <img src="assets/images/cut.jpg" alt="hand holding a hair dryer">
