add bg-img, txt and style to section 3

--- a/index.html
+++ b/index.html
@@ -46,18 +46,19 @@
         <h2 id="do-h2">What we do!</h2>
         <div id="what-we-do">
             <span>
-                <img src="assets/images/cut.jpg" alt="hand holding a hair dryer">
+                <img src="assets/images/cut.jpg" alt="hand holding a hair dryer" id="cut">
             </span>
             <span>
-                <img src="assets/images/color_s.jpg" alt="girl with pink hair">
+                <img src="assets/images/color_s.jpg" alt="girl with pink hair" id="color">
             </span>
             <span>
-                <img src="assets/images/style_s.jpg" alt="hand holding a hair dryer">
+                <img src="assets/images/style_s.jpg" alt="hand holding a hair dryer" id="style">
             </span>
         </div>
     </section>
-    <section>
-        image with text
+    <section id="bg2-outer">
+        <div id="bg2-img"></div>
+        <h2>Life is too short to have boring hair!</h2>
     </section>
     <section>
         Who we are
