add footer structure

--- a/index.html
+++ b/index.html
@@ -64,7 +64,23 @@
         Who we are
     </section>
     <footer>
-        Phone and social
+        <ul>
+            <li><i class="fa-solid fa-phone"></i><p>08-123 456 789</p></li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" aria-label="Visit our Facebook page. Opens in a new tab." rel="noopener"><i class="fa-brands fa-square-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" aria-label="Visit our Instagram page. Opens in a new tab." rel="noopener"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/" target="_blank" aria-label="Visit our Twitter page. Opens in a new tab." rel="noopener"><i class="fa-brands fa-square-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" aria-label="Visit our Youtube page. Opens in a new tab." rel="noopener"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+        </ul>
     </footer>
+
+    <script src="https://kit.fontawesome.com/16606b6431.js" crossorigin="anonymous"></script>
 </body>
 </html>
