add style to footer

--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
         <div id="bg2-img"></div>
         <h2>Life is too short to have boring hair!</h2>
     </section>
-    <section>
+    <!-- <section> 
         Who we are
-    </section>
+    </section> -->
     <footer>
-        <ul>
-            <li><i class="fa-solid fa-phone"></i><p>08-123 456 789</p></li>
+        <ul class="social-network">
+            <li>
+                <p>08-123 456 789</p>
+            </li>
             <li>
                 <a href="https://www.facebook.com/" target="_blank" aria-label="Visit our Facebook page. Opens in a new tab." rel="noopener"><i class="fa-brands fa-square-facebook"></i></a>
             </li>
@@ -76,7 +78,7 @@
                 <a href="https://twitter.com/" target="_blank" aria-label="Visit our Twitter page. Opens in a new tab." rel="noopener"><i class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li>
-                <a href="https://www.youtube.com/" target="_blank" aria-label="Visit our Youtube page. Opens in a new tab." rel="noopener"><i class="fa-brands fa-youtube"></i></a>
+                <p>Stockholm, Sweden</p>
             </li>
         </ul>
     </footer>
