--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
             <li>
                 <p>08-123 456 789</p>
             </li>
-            <li>
+            <li class="social-icons">
                 <a href="https://www.facebook.com/" target="_blank" aria-label="Visit our Facebook page. Opens in a new tab." rel="noopener"><i class="fa-brands fa-square-facebook"></i></a>
             </li>
-            <li>
+            <li class="social-icons">
                 <a href="https://www.instagram.com/" target="_blank" aria-label="Visit our Instagram page. Opens in a new tab." rel="noopener"><i class="fa-brands fa-instagram"></i></a>
             </li>
-            <li>
+            <li class="social-icons">
                 <a href="https://twitter.com/" target="_blank" aria-label="Visit our Twitter page. Opens in a new tab." rel="noopener"><i class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li>
