--- a/gallery.html
+++ b/gallery.html
@@ -36,15 +36,29 @@
             </nav>
         </div>
     </header>
-        <section>
+    <h2>Gallery</h2>
+    <p>Our gallery is a showcase of our color expertise and the beautiful transformations we have created for our clients. From natural-looking highlights to vibrant rainbow hair, our stylists have the skills and experience to bring your hair color visions to life. Take a look at our gallery and imagine the possibilities for your own hair. Book your appointment today and let us help you achieve your dream color at Vibrant Cuts.</p>
+        <section id="photos">
             <img src="/assets/images/blonde-curls.webp" alt="Woman with blonde curls">
+            <img src="/assets/images/short-red-curls.webp" alt="Woman red short curly hair">
+            <img src="/assets/images/pink-flowers.webp" alt="Woman with pink hair standing by a tree with white flowers">
             <img src="/assets/images/blonde-ombre-curls.webp" alt="Woman with dark to blonde ombre curls">
             <img src="/assets/images/blonde-short.webp" alt="Woman with blonde short hair">
             <img src="/assets/images/blonde-to-shoulder.webp" alt="Woman with blonde straight hair to shoulders">
             <img src="/assets/images/blue-bangs.webp" alt="Woman with blonde hair and blue bangs">
             <img src="/assets/images/cold-ombre.webp" alt="Woman with a cold dark to blonde ombre">
             <img src="/assets/images/cold-omre-warm-highlights.webp" alt="Woman with a cold dark to blonde ombre and warm blonde hightlights">
-            <img src="/assets/images/blonde-curls.webp" alt="Woman with blonde curls">
+            <img src="/assets/images/cold-purple.webp" alt="Woman with cold purple hair">
+            <img src="/assets/images/curl-cut.webp" alt="Woman with dark hair">
+            <img src="/assets/images/cut-afro.webp" alt="Woman with trimmed hair">
+            <img src="/assets/images/dusty-pink.webp" alt="Woman with long dusty pink hair">
+            <img src="/assets/images/highlights.webp" alt="Woman with blonde highlights">
+            <img src="/assets/images/magenta-long.webp" alt="Woman with long hair dyed in magenta">
+            <img src="/assets/images/blonde-pink-ombre.webp" alt="Woman with a blonde and pink ombre">            
+            <img src="/assets/images/rainbow-color.webp" alt="Woman with hair dyed with all the colors from the rainbow">
+            <img src="/assets/images//rainbow-highlitghts.webp" alt="Girl with rainbow colored highlights">
+            <img src="/assets/images/strawberry-pink-ombre.webp" alt="Woman with a strawberry pink ombre">
+            <img src="/assets/images/turquise-long.webp" alt="Woman with long turquise hair">
         </section>
 
 
