add style to text in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -36,9 +36,11 @@
             </nav>
         </div>
     </header>
-    <h2>Gallery</h2>
-    <p>Our gallery is a showcase of our color expertise and the beautiful transformations we have created for our clients. From natural-looking highlights to vibrant rainbow hair, our stylists have the skills and experience to bring your hair color visions to life. Take a look at our gallery and imagine the possibilities for your own hair. Book your appointment today and let us help you achieve your dream color at Vibrant Cuts.</p>
-        <section id="photos">
+    <section>
+        <div id="gallery-txt">
+            <p>Our gallery is a testament to the expertise and creativity of our stylists. Here, you will find a variety of color and cutting transformations that showcase our range of skills. From precision cuts and bold colors to subtle highlights and layered styles, our salon can help you achieve any look you desire. Browse our gallery and let us help you bring your hair dreams to reality. Book your appointment today at Vibrant Cuts and see the difference a professional stylist can make.</p>
+        </div>
+        <div id="photos">
             <img src="/assets/images/blonde-curls.webp" alt="Woman with blonde curls">
             <img src="/assets/images/short-red-curls.webp" alt="Woman red short curly hair">
             <img src="/assets/images/pink-flowers.webp" alt="Woman with pink hair standing by a tree with white flowers">
@@ -59,9 +61,8 @@
             <img src="/assets/images//rainbow-highlitghts.webp" alt="Girl with rainbow colored highlights">
             <img src="/assets/images/strawberry-pink-ombre.webp" alt="Woman with a strawberry pink ombre">
             <img src="/assets/images/turquise-long.webp" alt="Woman with long turquise hair">
-        </section>
-
-
+        </div>
+    </section>
     <footer>
         <ul class="social-network">
             <li>
