add text to what we do

--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
                 <img src="assets/images/style_s.jpg" alt="hand holding a hair dryer" id="style">
             </span>
         </div>
+        <div id="what-we-do-txt">
+            <span>
+                <h3>Cut</h3>
+                <p>Discover the perfect cut for you. Our skilled stylists are experts in the latest hair cutting techniques and trends to bring out your unique style.</p>
+            </span>
+            <span>
+                <h3>Color</h3>
+                <p>Unleash your true color. Our expert stylists specialize in custom hair coloring to enhance your natural beauty and bring out your unique style.</p>
+            </span>
+            <span>
+                <h3>Style</h3>
+                <p>Elevate your hair game. Our stylists specialize in crafting the perfect hairstyle to match your look and personality</p>
+            </span>
+        </div>
     </section>
     <section id="bg2-outer">
         <div id="bg2-img"></div>
