add style and bg-img to prices

--- a/prices.html
+++ b/prices.html
@@ -36,35 +36,40 @@
             </nav>
         </div>
     </header>
-        <p>At Vibrant Cuts, we believe that great hair should be accessible to everyone. That's why we offer a wide range of services at competitive prices to suit every budget. Our prices are based on the level of experience and qualifications of our stylists, so you can be sure you're getting the best value for your money.</p>
-        <h3>Haircut:</h3>
-            <ul>
-                <li>Women's haircut: $50 - $80</li>
-                <li>Men's haircut: $30 - $50</li>
-                <li>Children's haircut (under 12): $25 - $35</li>
-            </ul>
-        <h3>Coloring:</h3>
-            <ul>
-                <li>Root touch-up: $70 - $100</li>
-                <li>Full color: $90 - $120</li>
-                <li>Highlights (partial): $80 - $100</li>
-                <li>Highlights (full): $100 - $150</li>
-                <li>Balayage: $120 - $180</li>
-                <li>Ombre: $120 - $180</li>
-            </ul>
-        <h3>Styling:</h3>
-            <ul>
-                <li>Blowout: $30 - $45</li>
-                <li>Updo: $70 - $100</li>
-                <li>Special occasion styling: $75 - $120</li>
-            </ul>
-        <h3>Other services:</h3>
-            <ul>
-                <li>Keratin treatment: $150 - $300</li>
-                <li>Deep conditioning treatment: $20 - $40</li>
-            </ul>
-        <p>Please note that prices may vary depending on the length and thickness of your hair, and additional charges may apply for extra long or thick hair.
-        <br>We recommend booking a consultation with one of our stylists to discuss your specific needs and give you an accurate quote. Contact us today to schedule your appointment and take the first step towards beautiful, healthy hair.</p>
+    <section id="prices">
+        <div id="prices-bg"></div>
+        <div id="prices-txt">
+            <p>At Vibrant Cuts, we believe that great hair should be accessible to everyone. That's why we offer a wide range of services at competitive prices to suit every budget. Our prices are based on the level of experience and qualifications of our stylists, so you can be sure you're getting the best value for your money.</p>
+            <h3>Haircut:</h3>
+                <ul>
+                    <li>Women's haircut: $50 - $80</li>
+                    <li>Men's haircut: $30 - $50</li>
+                    <li>Children's haircut (under 12): $25 - $35</li>
+                </ul>
+            <h3>Coloring:</h3>
+                <ul>
+                    <li>Root touch-up: $70 - $100</li>
+                    <li>Full color: $90 - $120</li>
+                    <li>Highlights (partial): $80 - $100</li>
+                    <li>Highlights (full): $100 - $150</li>
+                    <li>Balayage: $120 - $180</li>
+                    <li>Ombre: $120 - $180</li>
+                </ul>
+            <h3>Styling:</h3>
+                <ul>
+                    <li>Blowout: $30 - $45</li>
+                    <li>Updo: $70 - $100</li>
+                    <li>Special occasion styling: $75 - $120</li>
+                </ul>
+            <h3>Other services:</h3>
+                <ul>
+                    <li>Keratin treatment: $150 - $300</li>
+                    <li>Deep conditioning treatment: $20 - $40</li>
+                </ul>
+            <p>Please note that prices may vary depending on the length and thickness of your hair, and additional charges may apply for extra long or thick hair.</p>
+            <p>We recommend booking a consultation with one of our stylists to discuss your specific needs and give you an accurate quote. Contact us today to schedule your appointment and take the first step towards beautiful, healthy hair.</p>
+        </div>
+    </section>
     <footer>
         <ul class="social-network">
             <li>
