add structure contact page

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,19 @@
             </nav>
         </div>
     </header>
-        contact
+        <section id="form-section">
+            <form action="#" method="post"></form>
+                <h2>Let's get you signed up!</h2>
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="first_name" required> 
+                <label for="lname">Last Name</label>
+                <input id="lname" type="text" name="last_name" required>
+                <label for="number">Phone number</label>
+                <input id="number" type="text" name="phone_number" required>
+                <label for="email">Email Address</label>
+                <input id="email" type="email" name="email_address" required>
+
+        </section>
     <footer>
         <ul class="social-network">
             <li>
