--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </span>
             <span>
                 <h3>Style</h3>
-                <p>Elevate your hair game. Our stylists specialize in crafting the perfect hairstyle to match your look and personality</p>
+                <p>Elevate your hair game. Our stylists specialize in crafting the perfect hairstyle to match your look and personality.</p>
                 <br>
             </span>
         </div>
