fix prices structure to able flexbox

--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
         <div id="bg2-img"></div>
         <h2>Life is too short to have boring hair!</h2>
     </section>
-    <!-- <section> 
-        Who we are
-    </section> -->
+    <!-- <section> Who we are </section> -->
     <footer>
         <ul class="social-network">
             <li>
