--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
             <form action="#" method="post"></form>
                 <h2>Let's get you signed up!</h2>
                 <label for="fname">First Name</label>
-                <input type="text" id="fname" name="first_name" required> 
+                <input id="fname" type="text" name="first_name" required> 
                 <label for="lname">Last Name</label>
                 <input id="lname" type="text" name="last_name" required>
                 <label for="number">Phone number</label>
