--- a/prices.html
+++ b/prices.html
@@ -65,8 +65,8 @@
                     <li>Keratin treatment: $150 - $300</li>
                     <li>Deep conditioning treatment: $20 - $40</li>
                 </ul>
-            <p>Please note that prices may vary depending on the length and thickness of your hair, and additional charges may apply for extra long or thick hair.</p>
-            <p>We recommend booking a consultation with one of our stylists to discuss your specific needs and give you an accurate quote. Contact us today to schedule your appointment and take the first step towards beautiful, healthy hair.</p>
+            <p class="lower-txt">Please note that prices may vary depending on the length and thickness of your hair, and additional charges may apply for extra long or thick hair.</p>
+            <p id="recommendation-txt" class="lower-txt">We recommend booking a consultation with one of our stylists to discuss your specific needs and give you an accurate quote. Contact us today to schedule your appointment and take the first step towards beautiful, healthy hair.</p>
         </div>
     </section>
     <footer>
