--- a/contact.html
+++ b/contact.html
@@ -36,38 +36,30 @@
             </nav>
         </div>
     </header>
-        <section id="form-section">
-            <div id="contact-info">
-                <p>At Vibrant Cut, we are always happy to hear from our clients and potential customers. Whether you have a question, a comment, or you're ready to book an appointment, please don't hesitate to contact us.</p>
-                <p id="contact-p2">You can reach us by phone at <em>08-123 456 789</em> or by filling out the contact form. Our team will do their best to respond to your inquiry as soon as possible.</p>
-            </div>
-            <div id="form">
-            <form action="#" method="post"></form>
-                <label for="fname">First Name</label>
-                <input id="fname" type="text" name="first_name" required> 
-                <label for="lname">Last Name</label>
-                <input id="lname" type="text" name="last_name" required>
-                <label for="phone">Phone number:</label>
-                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
-                <label for="email">Email Address</label>
-                <input id="email" type="email" name="email_address" required>
-                <!-- Checkboxes-->
+        <section>
+            <form action="#" method="post" class="contact-form">
+                <h2>Fill in to get contacted</h2>
+                <label for="fname">First name</label>
+                <input type="text" id="fname" name="first_name" required class="text-input">
+                <label for="lname">Last name</label>
+                <input type="text" id="lname" name="last_name" required class="text-input">
+                <label for="phone">Phone number</label>
+                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required class="text-input">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email_adress" required class="text-input">
                 <h3>What are you interested in?</h3>
-                <div id="checkbox"> 
-                    <input type="checkbox">
-                    <label for="">Haircut</label>
-                    <input type="checkbox">
-                    <label for="">Color</label>
-                    <input type="checkbox">
-                    <label for="">Styling</label>
-                    <input type="checkbox">
-                    <label for="">Other</label>
-                </div>
-                    <input type="submit" value="Submit">
-            </div>
-            <div>
-                <p>If you prefer to book your appointment in person, please visit us at <em>Storgatan 100, Stockholm</em>. Our salon is <em>open from 09.00 - 17.00 every day</em>.
-            </div>
+                <input type="checkbox" id="haircut" name="interested-in" value="haircut">
+                <label for="haircut">Haircut</label>
+                <input type="checkbox" id="color" name="interested-in" value="color">
+                <label for="color">Color</label>
+                <input type="checkbox" id="styling" name="interested-in" value="styling">
+                <label for="styling">Styling</label>
+                <br>
+                <label for="other">Other</label>
+                <input type="text" id="other" name="other-info" placeholder="Is there anything else you want us to know?" class="text-input">
+
+                <input type="submit" value="Contact Me!" class="send-button">
+            </form>
         </section>
     <footer>
         <ul class="social-network">
