add hover on submit button

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                 <label for="other">Other</label>
                 <input type="text" id="other" name="other-info" placeholder="Is there anything else you want us to know?" class="text-input">
 
-                <input type="submit" value="Contact Me!" class="send-button">
+                <input type="submit" value="Contact Me" class="send-button">
             </form>
         </section>
     <footer>
