--- a/contact.html
+++ b/contact.html
@@ -36,30 +36,60 @@
             </nav>
         </div>
     </header>
-        <section>
-            <form action="#" method="post" class="contact-form">
-                <h2>Fill in to get contacted</h2>
-                <label for="fname">First name</label>
-                <input type="text" id="fname" name="first_name" required class="text-input">
-                <label for="lname">Last name</label>
-                <input type="text" id="lname" name="last_name" required class="text-input">
-                <label for="phone">Phone number</label>
-                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required class="text-input">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email_adress" required class="text-input">
-                <h3>What are you interested in?</h3>
-                <input type="checkbox" id="haircut" name="interested-in" value="haircut">
-                <label for="haircut">Haircut</label>
-                <input type="checkbox" id="color" name="interested-in" value="color">
-                <label for="color">Color</label>
-                <input type="checkbox" id="styling" name="interested-in" value="styling">
-                <label for="styling">Styling</label>
-                <br>
-                <label for="other">Other</label>
-                <input type="text" id="other" name="other-info" placeholder="Is there anything else you want us to know?" class="text-input">
+        <section id="form-section">
+            <div id="info-div">
+                <h2>Contac us</h2>
+                <p>Get in touch with us for your next beauty appointment! Fill out the form or call us to book now. Our friendly team is always available to answer any questions and help you find the perfect style</p>
+                <h3>Phone number</h3>
+                <p>08-123 456 789</p>
+                <h3>Address</h3>
+                <p>Storgatan 100, Stockholm</p>
 
-                <input type="submit" value="Contact Me" class="send-button">
-            </form>
+                <table>
+                    <tr>
+                        <th></th>
+                        <th>Open</th>
+                        <th>Close</th>
+                    </tr>
+                    <tr>
+                        <td>Tue-Fri</td>
+                        <td>09:00</td>
+                        <td>18:00</td>
+                    </tr>
+                    <tr>
+                        <td>Sat</td>
+                        <td>09:00</td>
+                        <td>16:00</td>
+                    </tr>
+                </table>
+            </div>
+            <div id="form-div">
+                <form action="#" method="post" class="contact-form">
+                    <h2>Do you want to be contacted?</h2>
+                    <p>Fill in the form below and we will get back to you!</p>
+                    <label for="fname">First name</label>
+                    <input type="text" id="fname" name="first_name" required class="text-input">
+                    <label for="lname">Last name</label>
+                    <input type="text" id="lname" name="last_name" required class="text-input">
+                    <label for="phone">Phone number</label>
+                    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required class="text-input">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email_adress" required class="text-input">
+                    <h3>What are you interested in?</h3>
+                    <input type="checkbox" id="haircut" name="interested-in" value="haircut" class="checkbox-input">
+                    <label for="haircut">Haircut</label>
+                    <input type="checkbox" id="color" name="interested-in" value="color" class="checkbox-input">
+                    <label for="color">Color</label>
+                    <input type="checkbox" id="styling" name="interested-in" value="styling" class="checkbox-input">
+                    <label for="styling">Styling</label>
+                    <br>
+                    <!--<label for="other">Other</label>-->
+                    <br>
+                    <textarea name="other-info" id="other" placeholder="Anything else you want to let us know?" cols="30" rows="10"></textarea>
+
+                    <input type="submit" value="Contact Me" class="send-button">
+                </form>
+            </div>
         </section>
     <footer>
         <ul class="social-network">
