--- a/contact.html
+++ b/contact.html
@@ -37,36 +37,50 @@
         </div>
     </header>
         <section id="form-section">
-            <div id="info-div">
-                <h2>Contac us</h2>
+            <div id="info-div" class="contact-form">
+                <h2>Contact us</h2>
                 <p>Get in touch with us for your next beauty appointment! Fill out the form or call us to book now. Our friendly team is always available to answer any questions and help you find the perfect style</p>
-                <h3>Phone number</h3>
-                <p>08-123 456 789</p>
-                <h3>Address</h3>
-                <p>Storgatan 100, Stockholm</p>
-
                 <table>
+                    <tr>
+                        <th>Phone number</th>
+                        <th>Address</th>
+                    </tr>
+                    <tr>
+                        <td>08-123 456 789</td>
+                        <td>Storgatan 100</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Stockholm</td>
+                    </tr>
+                </table> 
+                <br>
+                <hr>
+                <br>
+                <h2>Opening hours</h2>
+                <table id="opening-table">
                     <tr>
                         <th></th>
                         <th>Open</th>
                         <th>Close</th>
                     </tr>
                     <tr>
-                        <td>Tue-Fri</td>
+                        <td class="open-day">Tue-Fri</td>
                         <td>09:00</td>
                         <td>18:00</td>
                     </tr>
                     <tr>
-                        <td>Sat</td>
+                        <td class="open-day">Sat</td>
                         <td>09:00</td>
                         <td>16:00</td>
                     </tr>
                 </table>
+                <img src="" alt="">
             </div>
             <div id="form-div">
                 <form action="#" method="post" class="contact-form">
-                    <h2>Do you want to be contacted?</h2>
-                    <p>Fill in the form below and we will get back to you!</p>
+                    <h2>Contact me</h2>
+                    <p>Fill in the form below and we'll get back to you!</p>
                     <label for="fname">First name</label>
                     <input type="text" id="fname" name="first_name" required class="text-input">
                     <label for="lname">Last name</label>
@@ -83,7 +97,7 @@
                     <input type="checkbox" id="styling" name="interested-in" value="styling" class="checkbox-input">
                     <label for="styling">Styling</label>
                     <br>
-                    <!--<label for="other">Other</label>-->
+
                     <br>
                     <textarea name="other-info" id="other" placeholder="Anything else you want to let us know?" cols="30" rows="10"></textarea>
 
