Add comments and clean html

--- a/gallery.html
+++ b/gallery.html
@@ -11,6 +11,9 @@
     <title>PP1 - Vibrant Cuts</title>
 </head>
 <body>
+
+    <!-- Header -->
+
     <header>
         <div class="header-container">
             <div class="logo">
@@ -37,9 +40,15 @@
         </div>
     </header>
     <section>
+
+    <!-- Gallery text -->
+
         <div id="gallery-txt">
             <p>Our gallery is a testament to the expertise and creativity of our stylists. Here, you will find a variety of color and cutting transformations that showcase our range of skills. From precision cuts and bold colors to subtle highlights and layered styles, our salon can help you achieve any look you desire. Browse our gallery and let us help you bring your hair dreams to reality. Book your appointment today at Vibrant Cuts and see the difference a professional stylist can make.</p>
         </div>
+
+    <!-- Gallery images -->
+
         <div id="photos">
             <img src="/assets/images/blonde-curls.webp" alt="Woman with blonde curls">
             <img src="/assets/images/short-red-curls.webp" alt="Woman red short curly hair">
@@ -63,6 +72,9 @@
             <img src="/assets/images/turquise-long.webp" alt="Woman with long turquise hair">
         </div>
     </section>
+
+    <!-- Footer -->
+
     <footer>
         <ul class="social-network">
             <li>
@@ -83,6 +95,8 @@
         </ul>
     </footer>
 
+    <!-- Fontawesome kit-->
+    
     <script src="https://kit.fontawesome.com/16606b6431.js" crossorigin="anonymous"></script>
 </body>
 </html>
