--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <title>PP1 - Vibrant Cuts</title>
 </head>
 <body>
+
+    <!-- Header -->
+
     <header>
         <div class="header-container">
             <div class="logo">
@@ -36,12 +39,18 @@
             </nav>
         </div>
     </header>
+
+    <!-- Hero image -->
+
     <section id="hero-outer">
         <div id="hero-image"></div>
         <div id="txt-hair-talk">
             <h2>Let your hair do the talking</h2>
         </div>
     </section>
+
+    <!-- What we do -->
+
     <section>
         <h2 id="do-h2">What we do!</h2>
         <div id="what-we-do">
@@ -71,11 +80,16 @@
             </span>
         </div>
     </section>
+
+    <!-- Background img 2 fixed -->
+
     <section id="bg2-outer">
         <div id="bg2-img"></div>
         <h2>Life is too short to have boring hair!</h2>
     </section>
-    <!-- <section> Who we are </section> -->
+
+    <!-- Footer -->
+
     <footer>
         <ul class="social-network">
             <li>
@@ -96,6 +110,7 @@
         </ul>
     </footer>
 
+    <!-- Fontawesome kit -->
     <script src="https://kit.fontawesome.com/16606b6431.js" crossorigin="anonymous"></script>
 </body>
 </html>
