--- a/prices.html
+++ b/prices.html
@@ -11,6 +11,8 @@
     <title>PP1 - Vibrant Cuts</title>
 </head>
 <body>
+
+    <!-- Header -->
     <header>
         <div class="header-container">
             <div class="logo">
@@ -36,6 +38,8 @@
             </nav>
         </div>
     </header>
+
+    <!-- Price list -->
     <section id="prices">
         <div id="prices-txt">
             <p>At Vibrant Cuts, we believe that great hair should be accessible to everyone. That's why we offer a wide range of services at competitive prices to suit every budget. Our prices are based on the level of experience and qualifications of our stylists, so you can be sure you're getting the best value for your money.</p>
@@ -69,6 +73,8 @@
             <p id="recommendation-txt" class="lower-txt">We recommend booking a consultation with one of our stylists to discuss your specific needs and give you an accurate quote. Contact us today to schedule your appointment and take the first step towards beautiful, healthy hair.</p>
         </div>
     </section>
+
+    <!-- Footer -->
     <footer>
         <ul class="social-network">
             <li>
@@ -88,6 +94,8 @@
             </li>
         </ul>
     </footer>
+
+    <!-- Fontawesome kit -->
 
     <script src="https://kit.fontawesome.com/16606b6431.js" crossorigin="anonymous"></script>
 </body>
