--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,9 @@
     <title>PP1 - Vibrant Cuts</title>
 </head>
 <body>
+
+    <!-- Header -->
+
     <header>
         <div class="header-container">
             <div class="logo">
@@ -37,6 +40,9 @@
         </div>
     </header>
         <section id="form-section">
+
+    <!-- Contact us information -->
+
             <div id="info-div" class="contact-form">
                 <h2>Contact us</h2>
                 <p>Get in touch with us for your next beauty appointment! Fill out the form or call us to book now. Our friendly team is always available to answer any questions and help you find the perfect style</p>
@@ -77,6 +83,9 @@
                 </table>
                 <img src="" alt="">
             </div>
+
+    <!-- Get contacted form -->
+    
             <div id="form-div">
                 <form action="#" method="post" class="contact-form">
                     <h2>Contact me</h2>
@@ -105,6 +114,8 @@
                 </form>
             </div>
         </section>
+
+        <!-- Footer -->
     <footer>
         <ul class="social-network">
             <li>
@@ -125,6 +136,8 @@
         </ul>
     </footer>
 
+    <!-- Fontawesome kit-->
+    
     <script src="https://kit.fontawesome.com/16606b6431.js" crossorigin="anonymous"></script>
 </body>
 </html>
