Add media query

--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
     <!-- Gallery text -->
 
         <div id="gallery-txt">
-            <p>Our gallery is a testament to the expertise and creativity of our stylists. Here, you will find a variety of color and cutting transformations that showcase our range of skills. From precision cuts and bold colors to subtle highlights and layered styles, our salon can help you achieve any look you desire. Browse our gallery and let us help you bring your hair dreams to reality. Book your appointment today at Vibrant Cuts and see the difference a professional stylist can make.</p>
+            <p>Here, you will find a variety of color and cutting transformations that showcase our range of skills. From precision cuts and bold colors to subtle highlights and layered styles, our salon can help you achieve any look you desire. Book your appointment today at Vibrant Cuts and see the difference a professional stylist can make.</p>
         </div>
 
     <!-- Gallery images -->
