--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,6 @@
                         <td>16:00</td>
                     </tr>
                 </table>
-                <img src="" alt="">
             </div>
 
     <!-- Get contacted form -->
@@ -95,7 +94,7 @@
                     <label for="lname">Last name</label>
                     <input type="text" id="lname" name="last_name" required class="text-input">
                     <label for="phone">Phone number</label>
-                    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required class="text-input">
+                    <input type="tel" id="phone" name="phone" required class="text-input">
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email_adress" required class="text-input">
                     <h3>What are you interested in?</h3>
