try add jpg in gallery instead of webp

--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,7 @@
     <!-- Gallery images -->
 
         <div id="photos">
-            <img src="/assets/images/blonde-curls.webp" alt="Woman with blonde curls">
+            <img src="/assets/images/blonde-curls.jpg" alt="Woman with blonde curls">
             <img src="/assets/images/short-red-curls.webp" alt="Woman red short curly hair">
             <img src="/assets/images/pink-flowers.webp" alt="Woman with pink hair standing by a tree with white flowers">
             <img src="/assets/images/blonde-ombre-curls.webp" alt="Woman with dark to blonde ombre curls">
