add media query footer

--- a/index.html
+++ b/index.html
@@ -90,11 +90,9 @@
 
     <!-- Footer -->
 
-    <footer>
-        <ul class="social-network">
-            <li>
-                <p>08-123 456 789</p>
-            </li>
+    <footer class="social-network">
+        <p>08-123 456 789</p>
+        <ul>
             <li class="social-icons">
                 <a href="https://www.facebook.com/" target="_blank" aria-label="Visit our Facebook page. Opens in a new tab." rel="noopener"><i class="fa-brands fa-square-facebook"></i></a>
             </li>
@@ -104,10 +102,8 @@
             <li class="social-icons">
                 <a href="https://twitter.com/" target="_blank" aria-label="Visit our Twitter page. Opens in a new tab." rel="noopener"><i class="fa-brands fa-square-twitter"></i></a>
             </li>
-            <li>
-                <p>Stockholm, Sweden</p>
-            </li>
         </ul>
+        <p>Stockholm, Sweden</p>
     </footer>
 
     <!-- Fontawesome kit -->
