change what we do section display to flexbox

--- a/index.html
+++ b/index.html
@@ -51,7 +51,26 @@
 
     <!-- What we do -->
 
-    <section>
+    <section id="what-container">
+        <div class="what-div" id="what-cut">
+            <img src="assets/images/cut.jpg" alt="hand holding a hair dryer" id="cut-img">
+            <h3>Cut</h3>
+                <p>Discover the perfect cut for you. Our skilled stylists are experts in the latest hair cutting techniques and trends to bring out your unique style.</p>
+        </div>
+        <div class="what-div" id="what-color">
+            <img src="assets/images/color_s.jpg" alt="girl with pink hair" id="color-img">
+            <h3>Color</h3>
+                <p>Unleash your true color. Our expert stylists specialize in custom hair coloring to enhance your natural beauty and bring out your unique style.</p>
+        </div>
+        <div class="what-div" id="what-style">
+            <img src="assets/images/style_s.jpg" alt="hand holding a hair dryer" id="style-img">
+            <h3>Style</h3>
+                <p>Elevate your hair game. Our stylists specialize in crafting the perfect hairstyle to match your look and personality.</p>
+                <br>
+        </div>
+    </section>
+
+    <!--<section>
         <h2 id="do-h2">What we do!</h2>
         <div id="what-we-do">
             <span>
@@ -79,7 +98,7 @@
                 <br>
             </span>
         </div>
-    </section>
+    </section>-->
 
     <!-- Background img 2 fixed -->
 
