fix padding social

--- a/index.html
+++ b/index.html
@@ -70,36 +70,6 @@
         </div>
     </section>
 
-    <!--<section>
-        <h2 id="do-h2">What we do!</h2>
-        <div id="what-we-do">
-            <span>
-                <img src="assets/images/cut.jpg" alt="hand holding a hair dryer" id="cut">
-            </span>
-            <span>
-                <img src="assets/images/color_s.jpg" alt="girl with pink hair" id="color">
-            </span>
-            <span>
-                <img src="assets/images/style_s.jpg" alt="hand holding a hair dryer" id="style">
-            </span>
-        </div>
-        <div id="what-we-do-txt">
-            <span>
-                <h3>Cut</h3>
-                <p>Discover the perfect cut for you. Our skilled stylists are experts in the latest hair cutting techniques and trends to bring out your unique style.</p>
-            </span>
-            <span>
-                <h3>Color</h3>
-                <p>Unleash your true color. Our expert stylists specialize in custom hair coloring to enhance your natural beauty and bring out your unique style.</p>
-            </span>
-            <span>
-                <h3>Style</h3>
-                <p>Elevate your hair game. Our stylists specialize in crafting the perfect hairstyle to match your look and personality.</p>
-                <br>
-            </span>
-        </div>
-    </section>-->
-
     <!-- Background img 2 fixed -->
 
     <section id="bg2-outer">
@@ -122,7 +92,7 @@
                 <a href="https://twitter.com/" target="_blank" aria-label="Visit our Twitter page. Opens in a new tab." rel="noopener"><i class="fa-brands fa-square-twitter"></i></a>
             </li>
         </ul>
-        <p>Stockholm, Sweden</p>
+        <p></p>Stockholm, Sweden</p>
     </footer>
 
     <!-- Fontawesome kit -->
