--- a/gallery.html
+++ b/gallery.html
@@ -44,11 +44,13 @@
     <!-- Gallery text -->
 
         <div id="gallery-txt">
+            <h2>Our work</h2>
             <p>Here, you will find a variety of color and cutting transformations that showcase our range of skills. From precision cuts and bold colors to subtle highlights and layered styles, our salon can help you achieve any look you desire. Book your appointment today at Vibrant Cuts and see the difference a professional stylist can make.</p>
         </div>
 
     <!-- Gallery images -->
-
+    
+    </section>
         <div id="photos">
             <img src="/assets/images/blonde-curls.jpg" alt="Woman with blonde curls">
             <img src="/assets/images/short-red-curls.webp" alt="Woman red short curly hair">
