--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <a href="https://twitter.com/" target="_blank" aria-label="Visit our Twitter page. Opens in a new tab." rel="noopener"><i class="fa-brands fa-square-twitter"></i></a>
             </li>
         </ul>
-        <p></p>Stockholm, Sweden</p>
+        <p>Stockholm, Sweden</p>
     </footer>
 
     <!-- Fontawesome kit -->
