try fix gallery

--- a/gallery.html
+++ b/gallery.html
@@ -53,25 +53,25 @@
     </section>
         <div id="photos">
             <img src="assets/images/blonde-curls.jpg" alt="Woman with blonde curls">
-            <img src="/assets/images/short-red-curls.webp" alt="Woman red short curly hair">
-            <img src="/assets/images/pink-flowers.webp" alt="Woman with pink hair standing by a tree with white flowers">
-            <img src="/assets/images/blonde-ombre-curls.webp" alt="Woman with dark to blonde ombre curls">
-            <img src="/assets/images/blonde-short.webp" alt="Woman with blonde short hair">
-            <img src="/assets/images/blonde-to-shoulder.webp" alt="Woman with blonde straight hair to shoulders">
-            <img src="/assets/images/blue-bangs.webp" alt="Woman with blonde hair and blue bangs">
-            <img src="/assets/images/cold-ombre.webp" alt="Woman with a cold dark to blonde ombre">
-            <img src="/assets/images/cold-omre-warm-highlights.webp" alt="Woman with a cold dark to blonde ombre and warm blonde hightlights">
-            <img src="/assets/images/cold-purple.webp" alt="Woman with cold purple hair">
-            <img src="/assets/images/curl-cut.webp" alt="Woman with dark hair">
-            <img src="/assets/images/cut-afro.webp" alt="Woman with trimmed hair">
-            <img src="/assets/images/dusty-pink.webp" alt="Woman with long dusty pink hair">
-            <img src="/assets/images/highlights.webp" alt="Woman with blonde highlights">
-            <img src="/assets/images/magenta-long.webp" alt="Woman with long hair dyed in magenta">
-            <img src="/assets/images/blonde-pink-ombre.webp" alt="Woman with a blonde and pink ombre">            
-            <img src="/assets/images/rainbow-color.webp" alt="Woman with hair dyed with all the colors from the rainbow">
-            <img src="/assets/images//rainbow-highlitghts.webp" alt="Girl with rainbow colored highlights">
-            <img src="/assets/images/strawberry-pink-ombre.webp" alt="Woman with a strawberry pink ombre">
-            <img src="/assets/images/turquise-long.webp" alt="Woman with long turquise hair">
+            <img src="assets/images/short-red-curls.webp" alt="Woman red short curly hair">
+            <img src="assets/images/pink-flowers.webp" alt="Woman with pink hair standing by a tree with white flowers">
+            <img src="assets/images/blonde-ombre-curls.webp" alt="Woman with dark to blonde ombre curls">
+            <img src="assets/images/blonde-short.webp" alt="Woman with blonde short hair">
+            <img src="assets/images/blonde-to-shoulder.webp" alt="Woman with blonde straight hair to shoulders">
+            <img src="assets/images/blue-bangs.webp" alt="Woman with blonde hair and blue bangs">
+            <img src="assets/images/cold-ombre.webp" alt="Woman with a cold dark to blonde ombre">
+            <img src="assets/images/cold-omre-warm-highlights.webp" alt="Woman with a cold dark to blonde ombre and warm blonde hightlights">
+            <img src="assets/images/cold-purple.webp" alt="Woman with cold purple hair">
+            <img src="assets/images/curl-cut.webp" alt="Woman with dark hair">
+            <img src="assets/images/cut-afro.webp" alt="Woman with trimmed hair">
+            <img src="assets/images/dusty-pink.webp" alt="Woman with long dusty pink hair">
+            <img src="assets/images/highlights.webp" alt="Woman with blonde highlights">
+            <img src="assets/images/magenta-long.webp" alt="Woman with long hair dyed in magenta">
+            <img src="assets/images/blonde-pink-ombre.webp" alt="Woman with a blonde and pink ombre">            
+            <img src="assets/images/rainbow-color.webp" alt="Woman with hair dyed with all the colors from the rainbow">
+            <img src="assets/images//rainbow-highlitghts.webp" alt="Girl with rainbow colored highlights">
+            <img src="assets/images/strawberry-pink-ombre.webp" alt="Woman with a strawberry pink ombre">
+            <img src="assets/images/turquise-long.webp" alt="Woman with long turquise hair">
         </div>
     </section>
 
