add h2 section what we do

--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
 
     <!-- What we do -->
 
-    <section id="what-container">
+    <section>
+        <div id="what-we-do-h2">
+            <h2>What we do</h2>
+        </div>
+    <div id="what-container">
+        
         <div class="what-div" id="what-cut">
             <img src="assets/images/cut.jpg" alt="hand holding a hair dryer" id="cut-img">
             <h3>Cut</h3>
@@ -68,6 +73,7 @@
                 <p>Elevate your hair game. Our stylists specialize in crafting the perfect hairstyle to match your look and personality.</p>
                 <br>
         </div>
+    </div>
     </section>
 
     <!-- Background img 2 fixed -->
