--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         <div class="what-div" id="what-cut">
             <img src="assets/images/cut.jpg" alt="hand holding a hair dryer" id="cut-img">
             <h3>Cut</h3>
-                <p>Discover the perfect cut for you. Our skilled stylists are experts in the latest hair cutting techniques and trends to bring out your unique style.</p>
+                <p class="what-p-line">Discover the perfect cut for you. Our skilled stylists are experts in the latest hair cutting techniques and trends to bring out your unique style.</p>
         </div>
         <div class="what-div" id="what-color">
             <img src="assets/images/color_s.jpg" alt="girl with pink hair" id="color-img">
             <h3>Color</h3>
-                <p>Unleash your true color. Our expert stylists specialize in custom hair coloring to enhance your natural beauty and bring out your unique style.</p>
+                <p class="what-p-line">Unleash your true color. Our expert stylists specialize in custom hair coloring to enhance your natural beauty and bring out your unique style.</p>
         </div>
         <div class="what-div" id="what-style">
             <img src="assets/images/style_s.jpg" alt="hand holding a hair dryer" id="style-img">
