--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
     <!-- Get contacted form -->
     
             <div id="form-div">
-                <form action="#" method="post" class="contact-form">
+                <form action="https://formdump.codeinstitute.net/>" method="post" class="contact-form" target="_blank">
                     <h2>Contact me</h2>
                     <p>Fill in the form below and we'll get back to you!</p>
                     <label for="fname">First name</label>
