fix responsive home page screen max 425px

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
         </div>
     </header>
 
-    <!-- Contact us information -->
+    <!-- Contact us information --> 
 
         <section id="form-section">
             <div id="info-div" class="contact-form">
@@ -86,7 +86,7 @@
     <!-- Get contacted form -->
     
             <div id="form-div">
-                <form action="https://formdump.codeinstitute.net/>" method="post" class="contact-form" target="_blank">
+                <form action="https://formdump.codeinstitute.net/>" method="POST" class="contact-form" target="_blank">
                     <h2>Contact me</h2>
                     <p>Fill in the form below and we'll get back to you!</p>
                     <label for="fname">First name</label>
